@@ -1,14 +1,12 @@
 package com.epages.readiness;
 
-import static com.google.common.collect.Maps.newLinkedHashMap;
 import static java.util.Collections.emptyMap;
-import static java.util.stream.Collectors.toList;
 import static lombok.AccessLevel.PRIVATE;
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Optional;
 
 import org.springframework.boot.actuate.health.Status;
 
@@ -41,7 +39,7 @@ public class HealthResponse implements Response {
     }
 
     @Builder.Default
-    private Map<String, Object> details = newLinkedHashMap();
+    private Map<String, Object> details = new LinkedHashMap<>();
 
     @JsonCreator
     public HealthResponse(
@@ -52,34 +50,29 @@ public class HealthResponse implements Response {
     }
 
     @JsonIgnore
-    @SuppressWarnings("unchecked")
     public List<ChildStatus> getChildrenStatus() {
         return details.entrySet().stream()
-                .map(ChildStatus::new)
-                .collect(toList());
+                .map(ChildStatus::from)
+                .toList();
     }
 
     @Getter
     @RequiredArgsConstructor
-    static class ChildStatus implements StatusCheck {
+    public static class ChildStatus implements StatusCheck {
         private final String name;
 
         private final Status status;
 
-        ChildStatus(Entry<String, Object> entry) {
-            this(entry.getKey(), entry.getValue());
-        }
-
-        ChildStatus(String name, Object object) {
-            this(name, (object instanceof Map ? Optional.of((Map) object) : Optional.empty()));
-        }
-
-        ChildStatus(String name, Optional<Map> optionalMap) {
-            this(name, optionalMap.map(map -> map.get("status")).orElse("custom").toString());
-        }
-
-        ChildStatus(String name, String status) {
+        private ChildStatus(String name, String status) {
             this(name, new Status(status));
+        }
+
+        public static ChildStatus from(Entry<String, Object> entry) {
+            if (entry.getValue() instanceof Map<?, ?> map) {
+                return new ChildStatus(entry.getKey(), map.get("status").toString());
+            }
+
+            return new ChildStatus(entry.getKey(), "custom");
         }
     }
 }
